--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/discwod/free-big-mac-w-mtn-dew/main/media/maxresdefault.jpg">
+    <meta property="og:image" content="https://raw.githubusercontent.com/BelleDelphine-leak/free-NSFW/main/media/bait.jpg">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
-    <meta property="og:video:url" content="https://raw.githubusercontent.com/discwod/free-big-mac-w-mtn-dew/main/media/Michael Jordan_ Stop it. Get some help..mhtml">
+    <meta property="og:video:url" content="https://raw.githubusercontent.com/BelleDelphine-leak/free-NSFW/main/media/horny-alarm.mp4">
     <!-- If you want a seamless transition between your thumbnail size and video size, adjust these values to match your thumbnail resolution. -->
     <!-- However, it will be all wonky if your thumbnail is vertical and your video is horizontal. This works best with similar aspect ratios -->
     <meta property="og:video:height" content="202">
@@ -16,7 +16,7 @@
     <!-- Stole the memes from https://github.com/iwakkrg/iwakkrg.github.io -->
     
     <!-- Redirect -->
-    <meta http-equiv="refresh" content="0; url=https://www.youtube.com@nottexttospeach" />
+    <meta http-equiv="refresh" content="0; url=https://thefreedomfight.org/?gad_source=1&gclid=EAIaIQobChMIlN2VqtvAhgMV20p_AB3ZIwG1EAAYASAAEgKEuPD_BwE" />
   </head>
   <body>
   </body>
